<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.InformationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:background="#FFFFFF">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_information"
            android:textAlignment="center"
            android:textSize="64dp"/>
        <ImageButton
            style="@style/InformationButtonStyle"
            android:src="@drawable/ic_fishbase" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_fishbase"
            android:textAlignment="center"/>
        <ImageButton
            style="@style/InformationButtonStyle"
            android:src="@drawable/ic_red_list" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_red_list"
            android:textAlignment="center"/>
        <ImageButton
            style="@style/InformationButtonStyle"
            android:src="@drawable/ic_regulations" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_regulations"
            android:textAlignment="center"/>
        <ImageButton
            style="@style/InformationButtonStyle"
            android:src="@drawable/ic_contact" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_contact"
            android:textAlignment="center"/>
        <ImageButton
            style="@style/InformationButtonStyle"
            android:src="@drawable/ic_about" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_about"
            android:textAlignment="center"/>
    </LinearLayout>
</ScrollView>